included a detail view for a voorval, that is, an instance get listed in a table, together with eventual 'maatregelen' and/or 'bestanden'

--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -19,7 +19,7 @@
                 <th>Synopsis</th>
 	        <th colspan="2">Acties Bestand</th>
 {% if ausr.is_admin or ausr.is_super%}
-	        <th colspan="2">Acties Voorval</th>
+	        <th colspan="3">Acties Voorval</th>
 	        <th colspan="2">Acties Maatregel</th>
 {% endif %}
             </tr>
@@ -45,6 +45,7 @@
 	    <td><a href="{% url 'report_ia:bestand_lijst' voorval.id %}" class="btn btn-success btn-sm"><span class="badge">{{ voorval.aantal_bestanden }}</span></a></td>
 {% if ausr.is_admin or ausr.is_super%}
 	    <td><a href="{% url 'report_ia:voorval_update' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
+	    <td><a href="{% url 'report_ia:voorval_detail' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-eye-open"></span></a></td>
 {% if ausr.is_super %}
             {% if voorval.aantal_maatregelen %}
 	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm disabled"><span class="glyphicon glyphicon-trash"></span></a></td>
