added autocomplete for type_toestel veld, + test html page search_resp.html

--- a/ato/report_ia/templates/voorval_ingave.html
+++ b/ato/report_ia/templates/voorval_ingave.html
@@ -7,6 +7,16 @@ $(document).ready(function() {
 	$('.has-popover').popover({'trigger':'hover'});
 	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
 });
+$(function() {
+  $("#id_zoek_type_toestel").autocomplete({
+    source: "/report_ia/zwevers/",
+    minLength: 2,
+    select: function( event, ui ) {
+        $("#id_type_toestel").val(ui.item.id) ;
+    }
+  });
+});
+
   </script>
 {% include "navbar_simpel.html" with lijst="voorval_create" %}
    <form  class="form-vertical" method="POST">
