--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -14,6 +14,7 @@
 	        <th>Club</th>
                 <th>Datum voorval</th>
                 <th>Type voorval</th>
+		<th>Locatie</th>
 	        <th>Type toestel</th>
                 <th>Opleiding</th>
                 <th>Synopsis</th>
@@ -38,6 +39,7 @@
 	    <td>{{ voorval.club.naam_kort }}</td>
 	    <td>{{ voorval.datum|date:"SHORT_DATE_FORMAT" }}</td>
 	    <td>{{ voorval.type_voorval }}</td>
+            <td>{{ voorval.locatie }}</td>
 	    <td>{{ voorval.type_toestel }}</td>
 	    <td>{{ voorval.opleiding }}</td>
 	    <td>{{ voorval.synopsis|truncatewords:20 }}</td>
