tried to add a fieldset for the boolena fields like muopo

--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -33,6 +33,16 @@
    <div class="container-fluid">
     {% block content %}
     {% endblock %}
+    <hr>
+    <div class="row">
+        <div class="col-sm-12">
+            <footer>
+                <p>© Copyright 2017 Object IT bvba</p>
+            </footer>
+        </div>
+    </div>
+
    </div>
+
   </body>
 </html>
