--- a/ato/report_ia/templates/navbar.html
+++ b/ato/report_ia/templates/navbar.html
@@ -33,6 +33,7 @@
 {% if ausr.is_super %}
     <li><a href="{% url 'admin:index' %}">Administrator</a></li>
 {% endif %}
+    <li><a href="{% url 'report_ia:faq' %}">FAQ</a></li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
 	<p class="navbar-text">{{club}}</p>
