modifs according to feedback fabienne 2

--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -27,7 +27,7 @@
   </div>
   <div class="media-body">
     <h4 class="media-heading">LVZC e-IA </h4>
-    <p>Het nieuwe electronisch meldings systeem voor incidenten/accidenten...</p>
+    <p>Het electronisch meldings systeem voor incidenten/accidenten...</p>
   </div>
 </div>
    <div class="container-fluid">
