added meteo fields removed popups on hover

--- a/ato/report_ia/templates/navbar.html
+++ b/ato/report_ia/templates/navbar.html
@@ -22,7 +22,7 @@
       </li>
 {% if ausr.is_super or ausr.is_admin %}
     <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Starts<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Starts en Vliegdagen<span class="caret"></span></a>
       <ul class="dropdown-menu">
         <li><a href="{% url 'report_ia:starts_create' %}">Ingeven</a></li>
         <li><a href="{% url 'report_ia:starts_list' %}">Overzicht</a></li>
