Update van de kernctiviteiten lijst home icon instead of <eIA

--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -26,8 +26,8 @@
     <img src="{% static "Logo_LVZC_blauw.jpg" %}" class="media-object" style="width:300px">
   </div>
   <div class="media-body">
-    <h4 class="media-heading">LVZC e-IA </h4>
-    <p>Het electronisch meldings systeem voor incidenten/accidenten...</p>
+    <h4 class="media-heading">LVZC AIR </h4>
+    <p><b>A</b>ccident & <b>I</b>ncident <b>R</b>egister</p>
   </div>
 </div>
    <div class="container-fluid">
