--- a/ato/report_ia/templates/navbar.html
+++ b/ato/report_ia/templates/navbar.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-      <a class="navbar-brand" href="{% url 'report_ia:home' %}"><span class="glyphicon glyphicon-menu-left"></span>e-IA LVZC</a>
+      <a class="navbar-brand" href="{% url 'report_ia:home' %}"><span class="glyphicon glyphicon-home"></span></a>
     </div>
     <div id="navbarCollapse" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
