modifs according to feedback fabienne same menu on all pages (removed navbar_simpel) modifs to starts & vliegdagen

--- a/ato/report_ia/templates/home.html
+++ b/ato/report_ia/templates/home.html
@@ -11,6 +11,7 @@ $(document).ready(function() {
 
 <div class="ingave-class">
 {% include "navbar.html" %}
+<p class="lead">Berichten</p>
 {% for artikel in data %}
   {{ artikel|safe }}
 {% endfor %}
