--- a/ato/report_ia/templates/maatregel_ingave_bevestiging.html
+++ b/ato/report_ia/templates/maatregel_ingave_bevestiging.html
@@ -2,8 +2,10 @@
 {% load bootstrap3 %}
 {% load staticfiles %}
 {% block content %}
-{% include "navbar_simpel.html" with lijst="maatregel" %}
+
 <div class="ingave-class">
+{% include "navbar.html"  %}
+<p class="lead">Bevestiging</p>
 <p><h2>Uw maatregel werd opgeslagen
 	 en een email verzonden naar de verantwoordelijke
 	 ATO safety en AHoT's van uw club</h2>
