--- a/ato/report_ia/templates/maatregel_lijst.html
+++ b/ato/report_ia/templates/maatregel_lijst.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <div class="ingave-class">
-{% include "navbar_simpel.html" with lijst="maatregel" %}      
+{% include "navbar.html" %}      
+ <p class="lead">Overzicht maatregelen</p>
 {% if object_list %}
     <div class="ingave-lijst">
       <div class="table-responsive">
