--- a/ato/report_ia/templates/voorval_ingave_bevestiging.html
+++ b/ato/report_ia/templates/voorval_ingave_bevestiging.html
@@ -8,8 +8,9 @@
 	body: 900px;
     }
 </style>
-{% include "navbar_simpel.html" with lijst="voorval_create" %}
+{% include "navbar.html" %}
 <div class="ingave-class">
+<p class="lead">Bevestiging</p>
 <p><h2>Uw voorval werd opgeslagen
 	 en een email verzonden naar de verantwoordelijke
 	 ATO safety en AHoT's van uw club</h2>
