--- a/ato/report_ia/templates/bestand_lijst.html
+++ b/ato/report_ia/templates/bestand_lijst.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <div class="ingave-class">
-{% include "navbar_simpel.html" with lijst="voorval_create" %}      
+{% include "navbar.html" %}      
+<p class="lead">Overzicht bestanden</p>
 {% if object_list %}
     <div class="ingave-lijst">
       <div class="table-responsive">
