--- a/ato/report_ia/templates/maatregel_confirm_delete.html
+++ b/ato/report_ia/templates/maatregel_confirm_delete.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 {% block content %}
-{% include "navbar_simpel.html" with lijst="maatregel_create" %}
+
 <div class="ingave-class">
+{% include "navbar.html"  %}
+<p class="lead">Bevestig verwijderen</p>
    <form  class="form-vertical" method="POST">{% csrf_token %}
 	  Bent u zeker dat u de maatregel met omschrijving <br> 
 	  <code>{{ maatregel.omschrijving|truncatewords:10 }}</code><br>
