--- a/ato/report_ia/templates/navbar.html
+++ b/ato/report_ia/templates/navbar.html
@@ -24,8 +24,11 @@
     <li class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="#">Starts en Vliegdagen<span class="caret"></span></a>
       <ul class="dropdown-menu">
+{% if ausr.is_super %}
         <li><a href="{% url 'report_ia:starts_create' %}">Ingeven</a></li>
-        <li><a href="{% url 'report_ia:starts_list' %}">Overzicht</a></li>
+        <li><a href="{% url 'report_ia:starts_generate' %}">Automatich</a></li>
+{% endif %}
+        <li><a href="{% url 'report_ia:starts_lijst' %}">Overzicht</a></li>
       </ul>
     </li>
     <li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
