--- a/ato/report_ia/templates/starts_ingave.html
+++ b/ato/report_ia/templates/starts_ingave.html
@@ -8,9 +8,9 @@ $(document).ready(function() {
 	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
 });
   </script>
-{% include "navbar_simpel.html" with lijst="start" %}
-
 <div class="ingave-class">
+{% include "navbar.html"  %}
+<p class="lead">Starts invullen</p>
    <form  class="form-vertical" method="POST">
         {% csrf_token %}
 	{% for field in form %}
