--- a/ato/report_ia/templates/upload_bestand.html
+++ b/ato/report_ia/templates/upload_bestand.html
@@ -8,7 +8,9 @@ $(document).ready(function() {
 	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
 });
   </script>
-{% include "navbar_simpel.html" with lijst="voorval_create" %}
+<div class="ingave-class">
+{% include "navbar.html" %}
+<p class="lead">Bestand uploaden</p>
    <form  class="form-vertical" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 	{% for field in form %}
@@ -21,9 +23,6 @@ $(document).ready(function() {
 	<button type="Reset" class="btn">
 	  Reset
 	</button>
-
     </form>
-
-
 </div>
 {% endblock %}
