--- a/ato/report_ia/templates/voorval_overview.html
+++ b/ato/report_ia/templates/voorval_overview.html
@@ -2,9 +2,9 @@
 {% load bootstrap3 %}
 {% block content %}
 
-
 <div class="ingave-class">
-{% include "navbar_simpel.html" with lijst="voorval_create" %}      
+{% include "navbar.html" %}
+ <p class="lead">Voorval overzicht</p>      
 {% if obj_voorval %}
     <div class="ingave-lijst">
       <div class="table-responsive">
