added club_mail, can be filled in by an admin, so we don't need to define extra users for the moment is handled with a formset

--- a/ato/report_ia/templates/navbar.html
+++ b/ato/report_ia/templates/navbar.html
@@ -32,6 +32,7 @@
       </ul>
     </li>
     <li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
+    <li><a href="{% url 'report_ia:club_mail' %}">Mail</a></li>
 {% endif %}
 {% if ausr.is_super %}
     <li><a href="{% url 'admin:index' %}">Administrator</a></li>
