first try with a form-wizard, CBV, some modifs according to fabienne's feedback

--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -19,6 +19,7 @@
     	margin: 20px;
 	body: 900px;
     }
+span.required:after { content: "*"; }
 </style>
 <!-- Left-aligned -->
 <div class="media">
