--- a/ato/report_ia/templates/starts_ingave.html
+++ b/ato/report_ia/templates/starts_ingave.html
@@ -14,6 +14,9 @@ $(document).ready(function() {
    <form  class="form-vertical" method="POST">
         {% csrf_token %}
 	{% for field in form %}
+           {% if field.field.required %}
+   	    {% bootstrap_icon "star" %}
+           {% endif %}
 	  {% bootstrap_label field.label_tag  %}
 	  {% bootstrap_field field show_label=False  %}
         {% endfor %}
