--- a/ato/report_ia/templates/navbar.html
+++ b/ato/report_ia/templates/navbar.html
@@ -37,7 +37,7 @@
 {% if ausr.is_super and user.is_staff%}
     <li><a href="{% url 'admin:index' %}">Administrator</a></li>
 {% endif %}
-    <li><a href="{% url 'report_ia:faq' %}">FAQ</a></li>
+    <li><a href="{% url 'report_ia:faq' %}" target="_blank">FAQ</a></li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
 	<p class="navbar-text">{{club}}</p>
