--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -18,7 +18,7 @@
 	        <th>Type toestel</th>
 		<th>ATO</th>
                 <th>Opleiding</th>
-                <th>Synopsis</th>
+                <th>Relaas</th>
 	        <th colspan="2">Acties Bestand</th>
 {% if ausr.is_admin or ausr.is_super%}
 	        <th colspan="4">Acties Voorval</th>
@@ -45,25 +45,25 @@
 	    <td>{{ voorval.ato }}</td>
 	    <td>{{ voorval.opleiding }}</td>
 	    <td>{{ voorval.synopsis|truncatewords:20 }}</td>
-	    <td><a href="{% url 'report_ia:upload_bestand' voorval.id %}" class="btn btn-success btn-sm" data-toggle="voorval" title="bestand uploaden" data-content="Default"><span class="glyphicon glyphicon-upload"></span></a></td>
-	    <td><a href="{% url 'report_ia:bestand_lijst' voorval.id %}" class="btn btn-success btn-sm"><span class="badge">{{ voorval.aantal_bestanden }}</span></a></td>
+	    <td><a href="{% url 'report_ia:upload_bestand' voorval.id %}" class="btn btn-success btn-sm" data-toggle="bestand" title="bestand uploaden" data-content="Default"><span class="glyphicon glyphicon-upload"></span></a></td>
+	    <td><a href="{% url 'report_ia:bestand_lijst' voorval.id %}" class="btn btn-success btn-sm"  data-toggle="bestand" title="naar lijst bestanden" data-content="Default"><span class="badge">{{ voorval.aantal_bestanden }}</span></a></td>
 {% if ausr.is_admin or ausr.is_super%}
-	    <td><a href="{% url 'report_ia:voorval_update' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
-	    <td><a href="{% url 'report_ia:voorval_detail' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-eye-open"></span></a></td>
-	    <td><a href="{% url 'report_ia:voorval_detail_doc' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-file"></span></a></td>
+	    <td><a href="{% url 'report_ia:voorval_update' voorval.id %}" class="btn btn-success btn-sm" data-toggle="voorval" title="voorval aanpassen" data-content="Default"><span class="glyphicon glyphicon-pencil"></span></a></td>
+	    <td><a href="{% url 'report_ia:voorval_detail' voorval.id %}" class="btn btn-success btn-sm"  data-toggle="voorval" title="voorval bekijken" data-content="Default"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+	    <td><a href="{% url 'report_ia:voorval_detail_doc' voorval.id %}" class="btn btn-success btn-sm"  data-toggle="voorval" title="voorval in document" data-content="Default"><span class="glyphicon glyphicon-file"></span></a></td>
 {% if ausr.is_super %}
             {% if voorval.aantal_maatregelen %}
 	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm disabled"><span class="glyphicon glyphicon-trash"></span></a></td>
             {% else %}
-	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a></td>
+	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm"  data-toggle="voorval" title="voorval verwijderen" data-content="Default"><span class="glyphicon glyphicon-trash"></span></a></td>
             {% endif %}
 {% else %}
 	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm disabled"><span class="glyphicon glyphicon-trash"></span></a></td>
 {% endif %}
 {% endif %}
 {% if ausr.is_admin or ausr.is_super %}
-	<td><a href="{% url 'report_ia:maatregel_create' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus-sign"></span></a></td>
-	<td><a href="{% url 'report_ia:maatregel_lijst' voorval.id %}" class="btn btn-success btn-sm"><span class="badge">{{ voorval.aantal_maatregelen }}</span></a></td>
+	<td><a href="{% url 'report_ia:maatregel_create' voorval.id %}" class="btn btn-success btn-sm"  data-toggle="maatregel" title="maatregel aanmaken" data-content="Default"><span class="glyphicon glyphicon-plus-sign"></span></a></td>
+	<td><a href="{% url 'report_ia:maatregel_lijst' voorval.id %}" class="btn btn-success btn-sm"  data-toggle="maatregel" title="naar lijst maatregels" data-content="Default"><span class="badge">{{ voorval.aantal_maatregelen }}</span></a></td>
 {% endif %}
 	   </tr>
            {% endfor %}
