--- a/ato/report_ia/templates/bestand_lijst.html
+++ b/ato/report_ia/templates/bestand_lijst.html
@@ -30,8 +30,8 @@
 	    <td>{{ bestand.bestand }} </td>
 	    <td><img src = "{{ bestand.bestand.url }}" class="img-responsive" ></td>
 	    <td>{{ bestand.op|date:"SHORT_DATE_FORMAT" }}</td>
+	    <td><a href="{{ bestand.bestand.url }}" class="btn btn-success btn-sm" data-toggle="bestand" title="bestand downloaden" data-content="Default"><span class="glyphicon glyphicon-download"></span></a></td>
 	    <td><a href="{% url 'report_ia:bestand_delete' bestand.id %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a></td>
-
 	   </tr>
            {% endfor %}
 	  </tbody>
