toon alleen incidenten van het huidige jaar

--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -72,7 +72,7 @@
 	</div>
        </div>
 {% else %}
-    <p>Er zijn nog geen voorvallen geregistreerd.</p>
+    <p>Er zijn nog geen voorvallen geregistreerd (jaar {{ year_filter }}) .</p>
 {% endif %}
 
 {% endblock %}
